--- a/src/app/products/details/details.component.css
+++ b/src/app/products/details/details.component.css
@@ -1,6 +1,25 @@
+
 .detail-card {
   max-width: 100%;
 }
 mat-card {
   max-width: 100%
+}
+button.mat-icon-button.mat-warn:after {
+  position: relative;
+  display: block;
+  left: -15px;
+  content: "I love it!";
+  font-size: .8rem;
+  top: -20px;
+}
+.mat-icon-button {
+  position: absolute;
+    right: 0;
+    top: 7px;
+}
+.select{
+  position: absolute;
+  right: 20;
+
 }
